--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <!-- Navigation -->
     <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About Us</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT US</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT US</a>
     </nav>
     <!-- Home Section -->
     <section id="home">
@@ -25,6 +25,20 @@
     <!-- About Section -->
     <section id="about">
         <h1>Undraw Pictures</h1>
+        <div class="about-container">
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="imgs/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
+            </div>
+            <div class="image-container">
+                <h2>Problem Solving</h2>
+                <img src="imgs/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">
+            </div>
+            <div class="image-container">
+                <h2>Web Innovation</h2>
+                <img src="imgs/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
+            </div>
+        </div>
     </section>
     <!-- Projects Section -->
     <section id="projects">
