--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     <!-- Projects Section -->
     <section id="projects">
         <h1>Buttons</h1>
+        <div class="buttons">
+            <button class="primary">Primary</button>
+            <button class="secondary">Secondary</button>
+            <button class="primary" disabled>Disabled</button>
+            <button class="outline">Outline</button>
+            <button class="secondary outline">Alt Outline</button>
+            <button class="outline" disabled>Disabled</button>
+        </div>
+        <div class="text-box" id="text-box">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis rem quaerat reiciendis deleniti cumque quo commodi accusamus sint perspiciatis debitis quidem facilis natus accusantium doloremque, aperiam a. Blanditiis, fugit architecto.</p>
+        </div>
     </section>
     <!-- Contact Section -->
     <section id="contact">
