--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-            <h1>Custom Title Here</h1>
-            <h2>Welcome to the Website!</h2>
+            <h1>Abstract Software</h1>
+            <h2>Creating memorable experiences!</h2>
         </div>
     </section>
     <!-- About Section -->
     <section id="about">
-        <h1>Undraw Pictures</h1>
+        <h1>What we do:</h1>
         <div class="about-container">
             <div class="image-container">
                 <h2>Web Innovation</h2>
@@ -46,7 +46,7 @@
                 <img src="imgs/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">
             </div>
             <div class="image-container">
-                <h2>Web Innovation</h2>
+                <h2>Creative Thinking</h2>
                 <img src="imgs/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
             </div>
         </div>
